unpackaged/main/default/objects/sked_DCR_Period__c/fields/sked_Period_End__c.field-meta.xml
<CustomField>
    <fullName>sked_Period_End__c</fullName>
    <label>Period End</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>