unpackaged/main/default/objects/sked_DCR_Period__c/fields/sked_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>sked_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>